--- a/m3y3/calculator-main/templates/form_result.html
+++ b/m3y3/calculator-main/templates/form_result.html
@@ -19,7 +19,7 @@
         <p><b>Ваше имя:</b> {{ name }}</p>
         <p><b>Ваша электронная почта:</b> <u>{{ email }}</u></p>
         <p><b>Ваш адрес:</b> {{ address }}</p>
-        <p><b>Ваша дата:</b> {{ date }}</p>
+        <p><b>Дата приезда наших служб:</b> {{ date }}</p>
         <br/>
         <p><b>Ваш подарок за заполнение формы:</b> <i>прогноз погоды на неделю бесплатно!</i></p><br/>
         <center><iframe src="https://www.meteoblue.com/en/weather/widget/daily/ip_romania_675514?geoloc=fixed&days=7&tempunit=CELSIUS&windunit=KILOMETER_PER_HOUR&precipunit=MILLIMETER&coloured=coloured&pictoicon=1&maxtemperature=1&mintemperature=1&windspeed=0&windgust=0&winddirection=0&uv=0&humidity=0&precipitation=0&precipitationprobability=0&spot=0&pressure=0&layout=light"  frameborder="0" scrolling="NO" allowtransparency="true" sandbox="allow-same-origin allow-scripts allow-popups allow-popups-to-escape-sandbox" style="width: 378px; height: 420px"></iframe><div><!-- DO NOT REMOVE THIS LINK --><a href="https://www.meteoblue.com/en/weather/week/ip_romania_675514?utm_source=daily_widget&utm_medium=linkus&utm_content=daily&utm_campaign=Weather%2BWidget" target="_blank" rel="noopener">meteoblue</a></div>
